{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 61,
  "lineage": "00124a4a-d755-494c-3919-a7fcdec855b2",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_internal_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.0.0.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-03-08T12:05:30.766-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/clgcporg10-161/regions/us-west1/addresses/static-internal-ip-mongodb",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "static-internal-ip-mongodb",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "clgcporg10-161",
            "purpose": "GCE_ENDPOINT",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/clgcporg10-161/regions/us-west1/addresses/static-internal-ip-mongodb",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/clgcporg10-161/regions/us-west1/subnetworks/kkap-vpc-subnet",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/clgcporg10-161/zones/us-west1-a/instances/kkap-mongo-db-server"
            ]
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.vpc_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "104.196.225.97",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-03-13T10:24:25.587-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/clgcporg10-161/regions/us-west1/addresses/static-public-ip-mongodb",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "static-public-ip-mongodb",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "clgcporg10-161",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/clgcporg10-161/regions/us-west1/addresses/static-public-ip-mongodb",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_egress_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-03-08T11:52:29.808-08:00",
            "deny": [],
            "description": "Allow egress traffic through the NAT",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/clgcporg10-161/global/firewalls/allow-egress-nat",
            "log_config": [],
            "name": "allow-egress-nat",
            "network": "https://www.googleapis.com/compute/v1/projects/clgcporg10-161/global/networks/kkap-vpc-network",
            "priority": 65534,
            "project": "clgcporg10-161",
            "self_link": "https://www.googleapis.com/compute/v1/projects/clgcporg10-161/global/firewalls/allow-egress-nat",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_iap_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-08T11:52:29.726-08:00",
            "deny": [],
            "description": "Allow TCP ingress traffic from 35.235.240.0/20 on port 22",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/clgcporg10-161/global/firewalls/allow-tcp-ingress-from-range",
            "log_config": [],
            "name": "allow-tcp-ingress-from-range",
            "network": "https://www.googleapis.com/compute/v1/projects/clgcporg10-161/global/networks/kkap-vpc-network",
            "priority": 65534,
            "project": "clgcporg10-161",
            "self_link": "https://www.googleapis.com/compute/v1/projects/clgcporg10-161/global/firewalls/allow-tcp-ingress-from-range",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_to_mongo",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-13T10:24:24.906-07:00",
            "deny": [],
            "description": "Allow SSH traffic to mongo server from anywhere",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/clgcporg10-161/global/firewalls/allow-ssh-to-mongo",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "allow-ssh-to-mongo",
            "network": "https://www.googleapis.com/compute/v1/projects/clgcporg10-161/global/networks/kkap-vpc-network",
            "priority": 1000,
            "project": "clgcporg10-161",
            "self_link": "https://www.googleapis.com/compute/v1/projects/clgcporg10-161/global/firewalls/allow-ssh-to-mongo",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "db-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "app_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-08T11:52:29.443-08:00",
            "deny": [],
            "description": "Allow traffic from app on gke to db server",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/clgcporg10-161/global/firewalls/mongo-connect",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "mongo-connect",
            "network": "https://www.googleapis.com/compute/v1/projects/clgcporg10-161/global/networks/kkap-vpc-network",
            "priority": 1060,
            "project": "clgcporg10-161",
            "self_link": "https://www.googleapis.com/compute/v1/projects/clgcporg10-161/global/firewalls/mongo-connect",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "db-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mongo_db_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250212",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/clgcporg10-161/zones/us-west1-a/disks/kkap-mongo-db-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-03-08T12:05:38.282-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-ops-agent-policy": "v2-x86-template-1-4-0",
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/clgcporg10-161/zones/us-west1-a/instances/kkap-mongo-db-server",
            "instance_id": "6101328911996624381",
            "label_fingerprint": "rvO_0RI_Xz0=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "rHPjUfvfpkk=",
            "metadata_startup_script": "sudo apt-get install gnupg curl\n\ncurl -fsSL https://www.mongodb.org/static/pgp/server-8.0.asc | \\\n   sudo gpg -o /usr/share/keyrings/mongodb-server-8.0.gpg \\\n   --dearmor\n\necho \"deb [ signed-by=/usr/share/keyrings/mongodb-server-8.0.gpg ] http://repo.mongodb.org/apt/debian bookworm/mongodb-org/8.0 main\" | sudo tee /etc/apt/sources.list.d/mongodb-org-8.0.list\n\nsudo apt-get update\n\nsudo apt-get install -y mongodb-org=8.0.1 mongodb-org-database= [...]
            "name": "kkap-mongo-db-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.196.225.97",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/clgcporg10-161/global/networks/kkap-vpc-network",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/clgcporg10-161/regions/us-west1/subnetworks/kkap-vpc-subnet",
                "subnetwork_project": "clgcporg10-161"
              }
            ],
            "project": "clgcporg10-161",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/clgcporg10-161/zones/us-west1-a/instances/kkap-mongo-db-server",
            "service_account": [
              {
                "email": "815204485712-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "db-server"
            ],
            "tags_fingerprint": "6nVWpqigcVg=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-west1-a"
          },
          "dependencies": [
            "data.google_compute_default_service_account.default",
            "google_compute_address.static_internal_ip",
            "google_compute_address.static_public_ip",
            "google_compute_subnetwork.vpc_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/clgcporg10-161/global/networks/kkap-vpc-network",
            "mtu": 0,
            "name": "kkap-vpc-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "267957343350759688",
            "numeric_id": "267957343350759688",
            "project": "clgcporg10-161",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/clgcporg10-161/global/networks/kkap-vpc-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-08T11:52:31.851-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/clgcporg10-161/regions/us-west1/routers/kkap-router",
            "name": "kkap-router",
            "network": "https://www.googleapis.com/compute/v1/projects/clgcporg10-161/global/networks/kkap-vpc-network",
            "project": "clgcporg10-161",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/clgcporg10-161/regions/us-west1/routers/kkap-router"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "clgcporg10-161/us-west1/kkap-router/kkap-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "kkap-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "clgcporg10-161",
            "region": "us-west1",
            "router": "kkap-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_router.router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-08T12:05:05.941-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/clgcporg10-161/regions/us-west1/subnetworks/kkap-vpc-subnet",
            "ip_cidr_range": "10.0.0.0/20",
            "name": "kkap-vpc-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/clgcporg10-161/global/networks/kkap-vpc-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "clgcporg10-161",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.80.0.0/14",
                "range_name": "gke-kkap-terra-st-cluster-pods-ffc813ff",
                "reserved_internal_range": "https://networkconnectivity.googleapis.com/v1/projects/clgcporg10-161/locations/global/internalRanges/gke-kkap-terra-st-cluster-pods-ffc813ff"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/clgcporg10-161/regions/us-west1/subnetworks/kkap-vpc-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 2569859745840176158
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}